[tool.poetry]
name = "arxiv-tool"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.13"
bs4 = "^0.0.2"
requests = "^2.31.0"
click = "^8.1.7"
rich = "^13.7.1"
pydantic = "^2.6.4"

# the tools
[tool.poetry.scripts]
arxiv-tool = "arxiv_tool.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
